--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@types/google.analytics": "^0.0.42",
+    "@types/googletag": "^1.1.2",
     "classnames": "^2.3.1",
-    "next": "^11.1.2",
+    "next": "12",
     "next-seo": "^4.28.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
